--- a/4Screen/FirstScreenViewController.xib
+++ b/4Screen/FirstScreenViewController.xib
@@ -10,6 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FirstScreenViewController" customModule="_Screen" customModuleProvider="target">
             <connections>
+                <outlet property="infoTableView" destination="32R-uz-lBZ" id="knQ-2G-iMX"/>
+                <outlet property="propertiesOfButton" destination="aTa-R5-dYd" id="kiY-Wp-x4C"/>
+                <outlet property="textToSave" destination="HhI-QA-Ipr" id="0S8-mu-kEr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -27,29 +30,28 @@
                     <rect key="frame" x="100" y="254" width="193" height="35"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="saveButton:" destination="-1" eventType="touchUpInside" id="1i7-As-nFJ"/>
+                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EiC-cz-Czc">
-                    <rect key="frame" x="0.0" y="425" width="393" height="393"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="EiC-cz-Czc" secondAttribute="height" multiplier="131:131" id="gNN-a7-sqj"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="32R-uz-lBZ">
+                    <rect key="frame" x="0.0" y="289" width="393" height="529"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="32R-uz-lBZ" secondAttribute="trailing" id="37y-Nq-fwb"/>
+                <constraint firstItem="32R-uz-lBZ" firstAttribute="top" secondItem="aTa-R5-dYd" secondAttribute="bottom" id="9wd-mL-JEY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aTa-R5-dYd" secondAttribute="trailing" constant="100" id="EdO-BS-0wZ"/>
                 <constraint firstItem="HhI-QA-Ipr" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="Hgw-kz-RXo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="EiC-cz-Czc" secondAttribute="trailing" id="JKG-gU-aLg"/>
                 <constraint firstItem="aTa-R5-dYd" firstAttribute="top" secondItem="HhI-QA-Ipr" secondAttribute="bottom" constant="61" id="LQi-f7-pWW"/>
                 <constraint firstItem="aTa-R5-dYd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="100" id="RTv-oc-86m"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="EiC-cz-Czc" secondAttribute="bottom" id="Uf3-pz-BJR"/>
                 <constraint firstItem="HhI-QA-Ipr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="X05-eK-dst"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HhI-QA-Ipr" secondAttribute="trailing" constant="50" id="XV1-7I-RjT"/>
-                <constraint firstItem="EiC-cz-Czc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="xdk-BB-mK7"/>
+                <constraint firstItem="32R-uz-lBZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bNF-qn-qGd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="32R-uz-lBZ" secondAttribute="bottom" id="hFF-OP-piW"/>
             </constraints>
             <point key="canvasLocation" x="35.877862595419849" y="19.718309859154932"/>
         </view>
