--- a/4Screen/SecondScreen/SecondScreenViewController.xib
+++ b/4Screen/SecondScreen/SecondScreenViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondScreenViewController" customModule="_Screen" customModuleProvider="target">
             <connections>
+                <outlet property="factsTableView" destination="xye-pv-gnW" id="lsC-ew-t0x"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,11 +27,19 @@
                         <action selector="requestButton:" destination="-1" eventType="touchUpInside" id="SAY-fv-TKL"/>
                     </connections>
                 </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="xye-pv-gnW">
+                    <rect key="frame" x="0.0" y="59" width="393" height="309.66666666666669"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="xye-pv-gnW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="1LC-Hz-LEs"/>
                 <constraint firstItem="7n5-fR-oe1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="9hu-wL-6aH"/>
+                <constraint firstItem="7n5-fR-oe1" firstAttribute="top" secondItem="xye-pv-gnW" secondAttribute="bottom" constant="40" id="Llg-Ry-9C1"/>
+                <constraint firstItem="xye-pv-gnW" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Rjd-hi-eb7"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xye-pv-gnW" secondAttribute="trailing" id="WCV-WA-Tz6"/>
                 <constraint firstItem="7n5-fR-oe1" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="s2g-V2-jDe"/>
             </constraints>
             <point key="canvasLocation" x="36" y="20"/>
